[package]
name = "tetris-wlroots"
description = "Tetris as a Wayland compositor"
version = "1.0.0"
repository = "https://github.com/timidger/tetris-wlroots/"
keywords = ["Wayland", "compositor", "window", "game", "wlroots", "tetris"]
readme = "README.md"
license = "MIT"
authors = ["Timidger <APragmaticPlace@gmail.com>"]

[dependencies]
wlroots = { branch="damage-tracking", git = "https://github.com/swaywm/wlroots-rs/" }
rand = "*"
